--- a/styles/Create.module.css
+++ b/styles/Create.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
+  margin-top: 4rem;
 }
 
 .titleInput {
